[package]
name = "compro-library"
version = "0.1.0"
authors = ["wotsushi <wotsushi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
regex = "1.3.4"
itertools = "0.8.2"
